sec_group.tf
resource "aws_security_group" "sec_group" {
  name        = "allow_http_https" #refer to it by its name 
  description = "Allow SSH inbound traffic"
  vpc_id      = "" #default VPC ID


  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]  
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]  
  }

  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
  }
}
